# dj-voters

./: .gitignore  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  fly.toml  generate_fake_voters.py  pyproject.toml
backend/api/: models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/core/: authentication.py  exceptions.py  settings.py  urls.py
backend/migrations/: 0001_initial.py  0002_voter_voterupload.py  0003_voterupload_reason_alter_voterupload_file.py
frontend/: .env.example  biome.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/components/ui/: badge.tsx  dropdown-menu.tsx
frontend/src/lib/: api.ts
frontend/src/routes/: __root.tsx  authenticate.lazy.tsx  dashboard.tsx  dashboard.voters.tsx  index.lazy.tsx
